--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,14 @@ version: "3.3"
 services:
   mongodb:
     image: mongo:3.4
+    privileged: true
     volumes:
       - type: bind
         source: ./data/db # 数据库文件存放地址，根据需要修改为本地地址
         target: /data/db
   redis:
     image: redis:4.0.6
+    privileged: true
     command: redis-server --appendonly yes
     volumes:
       - type: bind
@@ -15,6 +17,7 @@ services:
         target: /data
   web:
     image: easymock/easymock:1.6.0
+    privileged: true
     command: /bin/bash -c "npm start"
     links:
       - mongodb:mongodb
@@ -22,7 +25,7 @@ services:
     ports:
       - 7300:7300
     volumes:
-      - type: bind 
+      - type: bind
         source: ./logs # 日志地址，根据需要修改为本地地址
         target: /home/easy-mock/easy-mock/logs
       - type: bind
